# EuroScope-Plugin

./: .clang-format  .editorconfig  .gitattributes  CONTRIBUTING.md  Cargo.toml  license-mit  makefile  readme.md  rustfmt.toml
client/: Cargo.toml  build.rs  makefile
client/src/: api.rs  client.rs  config.rs  context.rs  ipc.rs  lib.rs  screen.rs  server.rs
config/: Cargo.toml
config/src/: lib.rs
plugin/: .gitignore  makefile
plugin/inc/: EuroScopePlugIn.hpp
plugin/src/: config.hpp  export.cpp  import.hpp  plugin.cpp  plugin.hpp  screen.cpp  screen.hpp
shared/protocol/: Cargo.toml
shared/protocol/src/: lib.rs
tool/confc/: Cargo.toml
tool/confc/src/: main.rs  map.rs
tool/server/: Cargo.toml
tool/server/src/: main.rs
