[workspace]
resolver = "2"
members = [
	"config/",
	"tool/confc/",
]

[workspace.package]
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/19wintersp/bars"

[workspace.dependencies]
bars-config = { path = "config/" }
anyhow = "1.0"
bincode = "1.3"
clap = "4.5"
kml = "0.8"
kurbo = "0.11"
serde = "1.0"
serde_json = "1.0"
usvg = "0.44"
