[workspace]
resolver = "2"
members = [
	"client/",
	"shared/config/",
	"shared/protocol/",
	"tool/confc/",
	"tool/server/",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/19wintersp/bars"

[workspace.dependencies]
bars-config = { path = "shared/config/" }
bars-protocol = { path = "shared/protocol/" }
anyhow = "1.0"
bincode = "1.3"
cbindgen = "0.28"
chrono = "0.4"
clap = "4.5"
flate2 = "1.0"
kml = "0.8"
kurbo = "0.11"
reqwest = "0.12"
serde = "1.0"
serde_json = "1.0"
tokio = "1.43"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
usvg = "0.44"
