[package]
name = "bars-client"
version = "0.1.0"
authors = ["Patrick Winters <19wintersp@gmail.com>"]
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["chrono"] }

[build-dependencies]
cbindgen.workspace = true
