[package]
name = "bars-client"
version = "0.1.0"
authors = ["Patrick Winters <19wintersp@gmail.com>"]
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
bars-config.workspace = true
bars-protocol.workspace = true
anyhow.workspace = true
bincode.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "rt", "sync"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["chrono"] }
windows = { workspace = true, features = ["Win32_Graphics_Gdi"] }

[build-dependencies]
cbindgen.workspace = true
