[package]
name = "bars-config"
version = "0.1.0"
authors = ["Patrick Winters <19wintersp@gmail.com>"]
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
bincode.workspace = true
flate2.workspace = true
serde = { workspace = true, features = ["derive"] }
