[package]
name = "bars-server"
version = "0.1.0"
authors = ["Patrick Winters <19wintersp@gmail.com>"]
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
bars-protocol.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
futures.workspace = true
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { workspace = true, features = ["tokio"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "tracing"] }
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["chrono"] }
